# automatic-tip-coater-gui

./: .clang-format  README.md
application/Axes/XAxis/: XAxis.cpp  XAxis.hpp  XAxisTestResults.hpp
application/Axes/YAxis/: YAxis.cpp  YAxis.hpp  YAxisTestResults.hpp
application/Axes/ZAxis/: ZAxis.cpp  ZAxis.hpp  ZAxisTestResults.hpp
application/Board/: Board.cpp  Board.hpp  BoardDevices.hpp
application/DelayProvider/: DelayProvider.cpp  DelayProvider.hpp
application/DisplayWs17143/: DisplayWs17143.cpp  DisplayWs17143.hpp
application/FlexibleMemoryController/: FlexibleMemoryController.cpp  FlexibleMemoryController.hpp
application/GpioPin/: GpioPin.cpp  GpioPin.hpp
application/Heater/: Heater.cpp  Heater.hpp  HeaterTestResults.hpp
application/Math/: Math.hpp
application/Model/: Model.cpp  Model.hpp
application/Ports/: IDelayProvider.hpp  IGpioPin.hpp  ISpi.hpp  ISystemClock.hpp  IUart.hpp
application/Rotator/: Rotator.cpp  Rotator.hpp  RotatorTestResults.hpp
application/Spi/: Spi.cpp  Spi.hpp
application/TouchControllerXpt2046/: TouchControllerXpt2046.cpp  TouchControllerXpt2046.hpp
application/UartLogger/: UartLogger.hpp
atc-gui/: application.config  atc-gui.touchgfx
atc-nucleo-u5a5zj/: .cproject  .mxproject  .project  atc-nucleo-u5a5zj.ioc
atc-nucleo-u5a5zj/TouchGFX/: .gitignore  atc-gui.touchgfx  target.config
platform/atc-nucleo-u5a5zj/: .cproject  .project  atc-nucleo-u5a5zj Debug.launch
platform/host/: CMakeLists.txt
platform/nucleo-u5a5zj/: .cproject  .project  nucleo-u5a5zj Debug.launch  nucleo-u5a5zj.ioc
(+289 files in other folders)
